--- a/lab6/package.json
+++ b/lab6/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lab5",
   "version": "0.1.0",
+  "homepage": "http://vyeung7.github.io/exercise-app",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
